// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonFile tests adds a header comment 1`] = `
"// header
// comment
{
  \\"abc\\": 123
}
"
`;

exports[`JsonFile tests adds an empty header comment 1`] = `
"{
  \\"abc\\": 123
}
"
`;
